[gd_scene load_steps=19 format=2]

[ext_resource path="res://Tile Map/Tile_map_texture.tres" type="TileSet" id=1]
[ext_resource path="res://Script/CameraMovement.gd" type="Script" id=2]
[ext_resource path="res://PNG/Character_idle.png" type="Texture" id=3]
[ext_resource path="res://PNG/Chloe_Tower.png" type="Texture" id=4]
[ext_resource path="res://Scene/Currency.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Font_Designs/Menu_font_styles.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scene/Human Timer.gd" type="Script" id=7]
[ext_resource path="res://Scene/Player_1.gd" type="Script" id=8]
[ext_resource path="res://Scene/AI Timer Label.gd" type="Script" id=9]
[ext_resource path="res://PNG/Birta_Building.png" type="Texture" id=10]
[ext_resource path="res://frame_unit.tscn" type="PackedScene" id=15]
[ext_resource path="res://Script/Game.gd" type="Script" id=16]
[ext_resource path="res://Script/SelectedDraw.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1349.06, 1688.78 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57.8546, 58.7715 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 724.616, 748.158 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="CanvasItemMaterial" id=5]

[node name="TileMap" type="Node2D"]
position = Vector2( 67, 52 )

[node name="Campus Map" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 52, 52 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 1610612736, 0, -65536, 1610612736, 0, -65535, 1610612736, 0, -65534, 1610612736, 0, -65533, 1610612736, 0, -65532, 1610612736, 0, -65531, 1610612736, 0, -65530, 1610612736, 0, -65529, 1610612736, 0, -65528, 1610612736, 0, -65527, 1610612736, 0, -65526, 1610612736, 0, -65525, 1610612736, 0, -65524, 1610612736, 0, -65523, 1610612736, 0, -65522, 1610612736, 0, -65521, 1610612736, 0, -65520, 1610612736, 0, -65519, 1610612736, 0, -65518, 1610612736, 0, -65517, 1610612736, 0, -65516, 1610612736, 0, -65515, 1610612736, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1610612736, 0, 1, 1610612736, 0, 2, 1610612736, 0, 3, 1610612736, 0, 4, 1610612736, 0, 5, 1610612736, 0, 6, 1610612736, 0, 7, 1610612736, 0, 8, 1610612736, 0, 9, 1610612736, 0, 10, 1610612736, 0, 11, 1610612736, 0, 12, 1610612736, 0, 13, 1610612736, 0, 14, 1610612736, 0, 15, 1610612736, 0, 16, 1610612736, 0, 17, 1610612736, 0, 18, 1610612736, 0, 19, 1610612736, 0, 20, 1610612736, 0, 21, 1610612736, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 1610612736, 0, 65537, 1610612736, 0, 65538, 1610612736, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, 1610612736, 0, 65542, 1610612736, 0, 65543, 1610612736, 0, 65544, 1610612736, 0, 65545, 1610612736, 0, 65546, 1610612736, 0, 65547, 1610612736, 0, 65548, 1610612736, 0, 65549, 1610612736, 0, 65550, 1610612736, 0, 65551, 1610612736, 0, 65552, 1610612736, 0, 65553, 1610612736, 0, 65554, 1610612736, 0, 65555, 1610612736, 0, 65556, 1610612736, 0, 65557, 1610612736, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 1610612736, 0, 131073, 1610612736, 0, 131074, 1610612736, 0, 131075, 1610612736, 0, 131076, 1610612736, 0, 131077, 1610612736, 0, 131078, 1610612736, 0, 131079, 1610612736, 0, 131080, 1610612736, 0, 131081, 1610612736, 0, 131082, 1610612736, 0, 131083, 1610612736, 0, 131084, 1610612736, 0, 131085, 1610612736, 0, 131086, 1610612736, 0, 131087, 1610612736, 0, 131088, 1610612736, 0, 131089, 1610612736, 0, 131090, 1610612736, 0, 131091, 1610612736, 0, 131092, 1610612736, 0, 131093, 1610612736, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 1610612736, 0, 196609, 1610612736, 0, 196610, 1610612736, 0, 196611, 1610612736, 0, 196612, 1610612736, 0, 196613, 1610612736, 0, 196614, 1610612736, 0, 196615, 1610612736, 0, 196616, 1610612736, 0, 196617, 1610612736, 0, 196618, 1610612736, 0, 196619, 1610612736, 0, 196620, 1610612736, 0, 196621, 1610612736, 0, 196622, 1610612736, 0, 196623, 1610612736, 0, 196624, 1610612736, 0, 196625, 1610612736, 0, 196626, 1610612736, 0, 196627, 1610612736, 0, 196628, 1610612736, 0, 196629, 1610612736, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 327678, 0, 0, 327679, 1610612736, 0, 262144, 1610612736, 0, 262145, 1610612736, 0, 262146, 1610612736, 0, 262147, 1610612736, 0, 262148, 1610612736, 0, 262149, 1610612736, 0, 262150, 1610612736, 0, 262151, 1610612736, 0, 262152, 1610612736, 0, 262153, 1610612736, 0, 262154, 1610612736, 0, 262155, 1610612736, 0, 262156, 1610612736, 0, 262157, 1610612736, 0, 262158, 1610612736, 0, 262159, 1610612736, 0, 262160, 1610612736, 0, 262161, 1610612736, 0, 262162, 1610612736, 0, 262163, 1610612736, 0, 262164, 1610612736, 0, 262165, 1610612736, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 393214, 0, 0, 393215, 1610612736, 0, 327680, 1610612736, 0, 327681, 1610612736, 0, 327682, 1610612736, 0, 327683, 1610612736, 0, 327684, 1610612736, 0, 327685, 1610612736, 0, 327686, 1610612736, 0, 327687, 1610612736, 0, 327688, 1610612736, 0, 327689, 1610612736, 0, 327690, 1610612736, 0, 327691, 1610612736, 0, 327692, 1610612736, 0, 327693, 1610612736, 0, 327694, 1610612736, 0, 327695, 1610612736, 0, 327696, 1610612736, 0, 327697, 1610612736, 0, 327698, 1610612736, 0, 327699, 1610612736, 0, 327700, 1610612736, 0, 327701, 1610612736, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 458750, 0, 0, 458751, 1610612736, 0, 393216, 1610612736, 0, 393217, 1610612736, 0, 393218, 1610612736, 0, 393219, 1610612736, 0, 393220, 1610612736, 0, 393221, 1610612736, 0, 393222, 1610612736, 0, 393223, 1610612736, 0, 393224, 1610612736, 0, 393225, 1610612736, 0, 393226, 1610612736, 0, 393227, 1610612736, 0, 393228, 1610612736, 0, 393229, 1610612736, 0, 393230, 1610612736, 0, 393231, 1610612736, 0, 393232, 1610612736, 0, 393233, 1610612736, 0, 393234, 1610612736, 0, 393235, 1610612736, 0, 393236, 1610612736, 0, 393237, 1610612736, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 524286, 0, 0, 524287, 1610612736, 0, 458752, 1610612736, 0, 458753, 1610612736, 0, 458754, 1610612736, 0, 458755, 1610612736, 0, 458756, 1610612736, 0, 458757, 1610612736, 0, 458758, 1610612736, 0, 458759, 1610612736, 0, 458760, 1610612736, 0, 458761, 1610612736, 0, 458762, 1610612736, 0, 458763, 1610612736, 0, 458764, 1610612736, 0, 458765, 1610612736, 0, 458766, 1610612736, 0, 458767, 1610612736, 0, 458768, 1610612736, 0, 458769, 1610612736, 0, 458770, 1610612736, 0, 458771, 1610612736, 0, 458772, 1610612736, 0, 458773, 1610612736, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 589822, 0, 0, 589823, 1610612736, 0, 524288, 1610612736, 0, 524289, 1610612736, 0, 524290, 1610612736, 0, 524291, 1610612736, 0, 524292, 1610612736, 0, 524293, 1610612736, 0, 524294, 1610612736, 0, 524295, 1610612736, 0, 524296, 1610612736, 0, 524297, 1610612736, 0, 524298, 1610612736, 0, 524299, 1610612736, 0, 524300, 1610612736, 0, 524301, 1610612736, 0, 524302, 1610612736, 0, 524303, 1610612736, 0, 524304, 1610612736, 0, 524305, 1610612736, 0, 524306, 1610612736, 0, 524307, 1610612736, 0, 524308, 1610612736, 0, 524309, 1610612736, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 655358, 0, 0, 655359, 1610612736, 0, 589824, 1610612736, 0, 589825, 1610612736, 0, 589826, 1610612736, 0, 589827, 1610612736, 0, 589828, 1610612736, 0, 589829, 1610612736, 0, 589830, 1610612736, 0, 589831, 1610612736, 0, 589832, 1610612736, 0, 589833, 1610612736, 0, 589834, 1610612736, 0, 589835, 1610612736, 0, 589836, 1610612736, 0, 589837, 1610612736, 0, 589838, 1610612736, 0, 589839, 1610612736, 0, 589840, 1610612736, 0, 589841, 1610612736, 0, 589842, 1610612736, 0, 589843, 1610612736, 0, 589844, 1610612736, 0, 589845, 1610612736, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 720894, 0, 0, 720895, 1610612736, 0, 655360, 1610612736, 0, 655361, 1610612736, 0, 655362, 1610612736, 0, 655363, 1610612736, 0, 655364, 1610612736, 0, 655365, 1610612736, 0, 655366, 1610612736, 0, 655367, 1610612736, 0, 655368, 1610612736, 0, 655369, 1610612736, 0, 655370, 1610612736, 0, 655371, 1610612736, 0, 655372, 1610612736, 0, 655373, 1610612736, 0, 655374, 1610612736, 0, 655375, 1610612736, 0, 655376, 1610612736, 0, 655377, 1610612736, 0, 655378, 1610612736, 0, 655379, 1610612736, 0, 655380, 1610612736, 0, 655381, 1610612736, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 786430, 0, 0, 786431, 1610612736, 0, 720896, 1610612736, 0, 720897, 1610612736, 0, 720898, 1610612736, 0, 720899, 1610612736, 0, 720900, 1610612736, 0, 720901, 1610612736, 0, 720902, 1610612736, 0, 720903, 1610612736, 0, 720904, 1610612736, 0, 720905, 1610612736, 0, 720906, 1610612736, 0, 720907, 1610612736, 0, 720908, 1610612736, 0, 720909, 1610612736, 0, 720910, 1610612736, 0, 720911, 1610612736, 0, 720912, 1610612736, 0, 720913, 1610612736, 0, 720914, 1610612736, 0, 720915, 1610612736, 0, 720916, 1610612736, 0, 720917, 1610612736, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 851966, 0, 0, 851967, 1610612736, 0, 786432, 1610612736, 0, 786433, 1610612736, 0, 786434, 1610612736, 0, 786435, 1610612736, 0, 786436, 1610612736, 0, 786437, 1610612736, 0, 786438, 1610612736, 0, 786439, 1610612736, 0, 786440, 1610612736, 0, 786441, 1610612736, 0, 786442, 1610612736, 0, 786443, 1610612736, 0, 786444, 1610612736, 0, 786445, 1610612736, 0, 786446, 1610612736, 0, 786447, 1610612736, 0, 786448, 1610612736, 0, 786449, 1610612736, 0, 786450, 1610612736, 0, 786451, 1610612736, 0, 786452, 1610612736, 0, 786453, 1610612736, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 1114110, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0 )

[node name="BackButton" type="Button" parent="Campus Map"]
margin_left = 648.843
margin_top = 744.708
margin_right = 933.843
margin_bottom = 828.708
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.290196, 0.294118, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.180392, 0.415686, 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human Main Building" type="KinematicBody2D" parent="."]
position = Vector2( 128.111, 258.042 )
scale = Vector2( 0.118008, 0.155884 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="HumanCollision" type="CollisionShape2D" parent="Human Main Building"]
position = Vector2( 10.3472, 47.7863 )
scale = Vector2( 0.676405, 0.423712 )
shape = SubResource( 1 )

[node name="HumanBuildingSprite" type="Sprite" parent="Human Main Building"]
position = Vector2( 177.954, 128.3 )
scale = Vector2( 3.96259, 3.72751 )
texture = ExtResource( 4 )

[node name="AI Main Building" type="KinematicBody2D" parent="."]
position = Vector2( 1179.89, 387.556 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="AICollision" type="CollisionShape2D" parent="AI Main Building"]
position = Vector2( 1351.18, -917.085 )
scale = Vector2( 0.676451, 0.423397 )
shape = SubResource( 1 )

[node name="AIBuildingSprite" type="Sprite" parent="AI Main Building"]
position = Vector2( 1500, -807.692 )
scale = Vector2( 3.83038, 3.54617 )
texture = ExtResource( 4 )

[node name="Currency" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Human Timer Label" type="Label" parent="Currency"]
margin_left = -12.5708
margin_top = -1.1132
margin_right = 111.429
margin_bottom = 51.8868
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human Timer Node" type="Timer" parent="Currency"]

[node name="AI Timer Label" type="Label" parent="Currency"]
margin_left = 1205.09
margin_top = 5.0
margin_right = 1328.09
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AI Timer Node" type="Timer" parent="Currency"]

[node name="HumanBuildingButton" type="Button" parent="Currency"]
margin_left = 177.237
margin_top = -7.0
margin_right = 437.237
margin_bottom = 49.0
custom_colors/font_color = Color( 0.854902, 0.968627, 0.0392157, 1 )
text = "Buy Human Buildings: 5, 25, 100 Coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIBuildingButton" type="Button" parent="Currency"]
margin_left = 959.666
margin_top = -4.44048
margin_right = 1187.67
margin_bottom = 51.5595
custom_colors/font_color = Color( 0.854902, 0.968627, 0.0392157, 1 )
text = "Buy AI Buildings: 5, 25, 100 Coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HumanUnitButton" type="Button" parent="Currency"]
margin_left = 444.74
margin_top = -4.29961
margin_right = 624.74
margin_bottom = 47.7004
custom_colors/font_color = Color( 0.854902, 0.968627, 0.0392157, 1 )
text = "Buy Human Units: 20 Coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AIUnitButton" type="Button" parent="Currency"]
margin_left = 793.626
margin_top = -1.22024
margin_right = 948.626
margin_bottom = 48.7798
custom_colors/font_color = Color( 0.854902, 0.968627, 0.0392157, 1 )
text = "Buy AI Units: 20 Coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human Win" type="Label" parent="Currency"]
visible = false
margin_left = 539.439
margin_top = 596.928
margin_right = 779.439
margin_bottom = 665.928
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.972549, 0.00392157, 0.00392157, 1 )
text = "HUMAN WINS!!!!!!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AI Win" type="Label" parent="Currency"]
visible = false
margin_left = 528.748
margin_top = 598.709
margin_right = 768.748
margin_bottom = 667.709
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.972549, 0.00392157, 0.00392157, 1 )
text = "AI WINS!!!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human Player" type="Node2D" parent="."]
visible = false
position = Vector2( 27.961, 73.5786 )

[node name="Player_1" type="KinematicBody2D" parent="Human Player"]
position = Vector2( -608.017, -37.3932 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Character_idle" type="Sprite" parent="Human Player/Player_1"]
position = Vector2( 346.071, 400.043 )
scale = Vector2( 0.711399, 0.683054 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Human Player/Player_1"]
position = Vector2( 351.632, 423.205 )
shape = SubResource( 2 )

[node name="Human Birta Building" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 668.767, 417.505 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="Human Birta Building"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="Human Birta Building"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="Human Birta Building2" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 861.201, 217.944 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="Human Birta Building2"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="Human Birta Building2"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="Human Birta Building3" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 490.587, 618.848 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="Human Birta Building3"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="Human Birta Building3"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="AI Birta Building" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 1313.78, 451.359 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="AI Birta Building"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="AI Birta Building"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="AI Birta Building2" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 1233.6, 212.598 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="AI Birta Building2"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="AI Birta Building2"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="AI Birta Building3" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 1600.65, 608.157 )
scale = Vector2( 0.118, 0.156 )
__meta__ = {
"_edit_group_": true
}

[node name="BirtaCollision" type="CollisionShape2D" parent="AI Birta Building3"]
position = Vector2( -2286.64, -61.5903 )
shape = SubResource( 3 )

[node name="BirtaSprite" type="Sprite" parent="AI Birta Building3"]
position = Vector2( -1449.15, 903.846 )
scale = Vector2( 5.83051, 7.08928 )
texture = ExtResource( 10 )

[node name="Moving_unit" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="YSort" type="YSort" parent="Moving_unit"]

[node name="Unit" parent="Moving_unit/YSort" instance=ExtResource( 15 )]
visible = false
material = SubResource( 4 )
position = Vector2( 292.713, 317.681 )

[node name="Unit2" parent="Moving_unit/YSort" instance=ExtResource( 15 )]
visible = false
material = SubResource( 4 )
position = Vector2( 293.515, 421.402 )

[node name="Unit3" parent="Moving_unit/YSort" instance=ExtResource( 15 )]
visible = false
material = SubResource( 5 )
position = Vector2( 1165.69, 284.251 )
unit_owner = 1

[node name="Unit4" parent="Moving_unit/YSort" instance=ExtResource( 15 )]
visible = false
material = SubResource( 5 )
position = Vector2( 1171.04, 387.595 )
unit_owner = 1

[node name="SelectedDraw" type="Node2D" parent="Moving_unit"]
script = ExtResource( 18 )

[node name="Camera" type="Node2D" parent="."]
position = Vector2( 215.647, 77.932 )

[node name="Camera2D" type="Camera2D" parent="Camera"]
position = Vector2( 480, 320 )
current = true
script = ExtResource( 2 )

[connection signal="pressed" from="Campus Map/BackButton" to="Human Player/Player_1" method="_on_Button_pressed"]
[connection signal="timeout" from="Currency/Human Timer Node" to="Currency" method="_on_Human_Timer_Node_timeout"]
[connection signal="timeout" from="Currency/AI Timer Node" to="Currency/HumanBuildingButton" method="_on_AI_Timer_Node_timeout"]
[connection signal="timeout" from="Currency/AI Timer Node" to="Currency" method="_on_AI_Timer_Node_timeout"]
[connection signal="pressed" from="Currency/HumanBuildingButton" to="Currency" method="_on_HumanBuildingButton_pressed"]
[connection signal="pressed" from="Currency/AIBuildingButton" to="Currency" method="_on_AIBuildingButton_pressed"]
[connection signal="pressed" from="Currency/HumanUnitButton" to="Currency" method="_on_HumanUnitButton_pressed"]
[connection signal="pressed" from="Currency/AIUnitButton" to="Currency" method="_on_AIUnitButton_pressed"]
